<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvRepoName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ellipsize="end"
        android:lines="1"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toStartOf="@+id/tvOpenIssues"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="hello-world" />

    <TextView
        android:id="@+id/tvOpenIssues"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="4dp"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="italic"
        app:layout_constraintEnd_toStartOf="@+id/tvOpenIssuesText"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="15" />

    <TextView
        android:id="@+id/tvOpenIssuesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/open_issues"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/tvOpenIssues"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tvOpenIssues" />

    <TextView
        android:id="@+id/tvCommits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/commits"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/ivExpand"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRepoName" />

    <ImageView
        android:id="@+id/ivExpand"
        android:layout_width="32dp"
        android:layout_height="32dp"
        app:layout_constraintBottom_toBottomOf="@+id/tvCommits"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvCommits"
        app:layout_constraintTop_toTopOf="@+id/tvCommits"
        app:srcCompat="@drawable/ic_drop_down" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clCommits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCommits">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCommits"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:background="@color/lightGrey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvNoCommits"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/no_commits_for_this_repo"
            android:gravity="center"
            android:visibility="gone"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:textColor="@android:color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>